feat: initial commit

--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,18 @@ inputs:
     description: '(Optional) Command to build application.'
     required: false
     default: ''
+  aws_access_key_id:
+    description: 'Aws access key to download latest cloudformation.'
+    required: true
+    default: ''
+  aws_secret_access_key:
+    description: 'Aws secret access key to download latest cloudformation.'
+    required: true
+    default: ''
+  github_token:
+    description: 'Github token to write comments in PR.'
+    required: true
+    default: ''
 runs:
   using: composite
   steps:
@@ -34,8 +46,8 @@ runs:
       with:
         args: package -p new-plan
       env:
-         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         AWS_ACCESS_KEY_ID: ${{ input.aws_access_key_id }}
+         AWS_SECRET_ACCESS_KEY: ${{ input.aws_secret_access_key }}
 
     - name: Saving cloudformation
       shell: bash
@@ -49,7 +61,7 @@ runs:
     - name: Create comment
       uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.TOKEN }}
+        github-token: ${{ input.TOKEN }}
         script: |
           const fs = require("fs");
           const buffer = fs.readFileSync("result.txt");
