--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
     description: 'Aws secret access key to download latest cloudformation.'
     required: true
     default: ''
+  aws_region:
+    description: '(Optional) Aws region.'
+    required: false
+    default: 'sa-east-1'
   github_token:
     description: 'Github token to write comments in PR.'
     required: true
@@ -36,6 +40,10 @@ runs:
       run: |
         pip install awscli
         aws s3 cp s3://serverlessplans/serverless-state.json .
+      env:
+         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
+         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
+         AWS_REGION: ${{inputs.aws_region}}
 
     - name: Build application
       shell: bash
