--- a/action.yml
+++ b/action.yml
@@ -40,10 +40,7 @@ runs:
       run: |
         echo $AWS_ACCESS_KEY_ID
         pip install awscli
-        aws s3 cp s3://serverlessplans/serverless-state.json .
-      env:
-         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
-         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
+        AWS_ACCESS_KEY_ID=${{ inputs.aws_access_key_id }} AWS_SECRET_ACCESS_KEY=${{ inputs.aws_secret_access_key }} aws s3 cp s3://serverlessplans/serverless-state.json .
 
     - name: Build application
       shell: bash
