feat: initial commit

--- a/action.yml
+++ b/action.yml
@@ -38,9 +38,11 @@ runs:
     - name: Install awscli
       shell: bash
       run: |
-        echo $AWS_ACCESS_KEY_ID
-        AWS_ACCESS_KEY_ID=${{ inputs.aws_access_key_id }} AWS_SECRET_ACCESS_KEY=${{ inputs.aws_secret_access_key }} pip install awscli
-        AWS_ACCESS_KEY_ID=${{ inputs.aws_access_key_id }} AWS_SECRET_ACCESS_KEY=${{ inputs.aws_secret_access_key }} aws s3 cp s3://serverlessplans/serverless-state.json .
+        pip install awscli
+        aws s3 cp s3://serverlessplans/serverless-state.json .
+      env:
+         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
+         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
 
     - name: Build application
       shell: bash
@@ -50,9 +52,6 @@ runs:
       uses: serverless/github-action@v3.1
       with:
         args: package -p new-plan
-      env:
-         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
-         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
 
     - name: Saving cloudformation
       shell: bash
