--- a/action.yml
+++ b/action.yml
@@ -98,3 +98,6 @@ runs:
       shell: bash
       run: |
         aws s3 cp new-plan/serverless-state.json s3://${{inputs.s3}}/serverless-state.json
+      env:
+         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
+         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
