--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
     description: 'Aws secret access key to download latest cloudformation.'
     required: true
     default: ''
+  aws_region:
+    description: 'Aws region of S3'
+    required: true
+    default: ''
   github_token:
     description: 'Github token to write comments in PR.'
     required: true
@@ -57,8 +61,9 @@ runs:
         cp new-plan/serverless-state.json new-serverless-state.json
         diff -u serverless-state.json new-plan/serverless-state.json > result.txt || true
       env:
-         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
-         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
+        AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
+        AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
+        AWS_DEFAULT_REGION: ${{ inputs.aws_region }}
 
     - name: Create comment
       if: inputs.generate_comment == 'true'
@@ -95,5 +100,6 @@ runs:
       run: |
         aws s3 cp new-plan/serverless-state.json s3://${{inputs.s3}}/serverless-state.json
       env:
-         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
-         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
+        AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key_id }}
+        AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_access_key }}
+        AWS_DEFAULT_REGION: ${{ inputs.aws_region }}
